# render

./: CMakeLists.txt  README.md  WidgetOGL.cpp  WidgetOGL.h  kinect.xyz  main.cpp  sites_importants  test.txt  visibles_frog.xyz
